...
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_5"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/extrabold"
        android:text="@string/foo"
        android:textColor="@color/black"
...
        android:paddingEnd="@dimen/padding_10"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/ivFav"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_fav_off"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />
...
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/regular"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/padding_10"
...
