...
        app:bubbletab_icon_size="@dimen/size_18"
        app:bubbletab_menuResource="@menu/menu_main"
        app:bubbletab_title_size="@dimen/font_14"
        app:bubbletab_vertical_padding="10dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bnMenu"
        android:layout_marginTop="@dimen/margin_10" />
</RelativeLayout>
