...
                            android:background="@drawable/ic_placeholder"/>
                    </LinearLayout>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:visibility="gone"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
...
